*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8696 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/da/foxtrick.properties
+++ b/content/locale/da/foxtrick.properties
@@ -156,16 +156,21 @@ foxtrick.MatchReportFormat.desc=Præsentation af kamprapporten linie for linie i
 foxtrick.MatchReportFormat.ShowEventIcons.desc=Tilføj specifikke ikoner for begivenheder.
 foxtrick.ForumRedirManagerToTeam.desc=Omdirigere links fra manager side til hold side på forum links
 foxtrick.ManagerButtons.desc=Tilføje eller ændre manager knapper på manager og hold side
-foxtrick.ManagerButtons.GuestBook.desc=Tilføjer skrive i gæstebog link til manager og hold side
+foxtrick.ManagerButtons.GuestBook.desc=Tilføjer skriv i gæstebog link til manager og hold side
 foxtrick.HTThreadMarker.desc=Fremhæver tråde oprettet af HT'er
-foxtrick.TeamStats.desc=Udarbejder en oversigt over et holds spillere.
+foxtrick.TeamStats.desc=Udarbejder et overblik over holdets spillere.
 foxtrick.TeamStats.General.desc=Generelle oplysninger (TSI/alder)
 foxtrick.TeamStats.Speciality.desc=Specialitet
 foxtrick.TeamStats.Personality.desc=Personlighed
 foxtrick.TeamStats.Status.desc=Status (kort/skader)
 foxtrick.TeamStats.Current_league.desc=Nuværende liga
-foxtrick.LargeFlags.desc=Replaces the tiny country flag on player pages with a large one
-foxtrick.GoToPostBox.desc=Adds box a GoToPostX box to forum page
+foxtrick.ExtraPlayerInfo.desc=Vis ekstra oplysninger af spillere på spillere side.
+foxtrick.ExtraPlayerInfo.CoachInfo.desc=Vis oplysninger af tidligere og nuværende trænere.
+foxtrick.ExtraPlayerInfo.Flag.desc=Vis spiller nationaliteter som flag.
+foxtrick.PlayerFilters.desc=﻿Tilføj på spillertrup side et tilvalgs felt til filtrering af spillere.
+foxtrick.HistoryStats.desc=Udarbejder en oversigt over holdets historie.
+foxtrick.LargeFlags.desc=Forstør flag på spillerens side, hvis ansigter er vist (kan gå ned på GNU / Linux)
+foxtrick.GoToPostBox.desc=Tilføjer en GåTilIndlægX boks til forum side. Skjuler HT's 'Markere som ulæst fra'\!\!Du kan bruge 'Markér ulæst' modul til at have denne funktion i indlæggets fodnote.
 foxtrick.TeamSelectBox.desc=Replaces the list of players by a selectbox on players page
 foxtrick.CopyPlayerAd.desc=Adds a Button to 'Actions' on player site, so you can copy a player transfer add to clipboard
 foxtrick.CustomMedals.desc=Replaces the new Hattrick medals with the old style ones
