--- a/content/locale/fr/foxtrick.properties
+++ b/content/locale/fr/foxtrick.properties
@@ -292,6 +292,7 @@ foxtrick.TeamStats.TransferListed.label=Sur la liste des transferts
 foxtrick.TeamStats.Pictures.label=Photos
 foxtrick.TeamStats.PlayedLatest.label=A joué pendant le dernier match
 foxtrick.TeamStats.NotPlayedLatest.label=N'a pas joué pendant le dernier match
+foxtrick.TeamStats.HomeGrownPlayers.label=Joueurs de production locale
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -458,6 +459,7 @@ Last_match=Dernier Match
 Last_match.abbr=Match
 Last_stars=Dernière Note
 Last_stars.abbr=No
+Last_stars_decline=Dernière baisse de star
 Last_position=Dernière Position
 Last_position.abbr=Pos
 #following string uses pluralForms
@@ -479,9 +481,14 @@ LeagueGoals=Buts en ligue cette saison
 LeagueGoals.abbr=BL
 CareerGoals=Buts dans sa carrière
 CareerGoals.abbr=BC
+Hattricks=Coups de chapeau
+
+Current_club=Équipe actuelle
+Current_club.abbr=Équipe
 
 
-
+Hotlist=Les hors classe
+Hotlist.abbr=Hors classe
 
 
 #matchdetail
@@ -596,6 +603,7 @@ LastLineup=Dernière composition de l'équipe
 YouthMatches=Matchs Équipe junior
 more=plus...
 less=moins...
+TeamPopupLinks.OpenNewTab=Ouvrir dans un nouvel onglet
 
 total_stars=Nombre total d'étoiles
 
@@ -645,6 +653,9 @@ HTMSPrediction.title=Analyse du match par HTMS
 HTMSPrediction.changePrediction=Change prediction
 
 #htms table of statistical truth
+truthTable.name=Position actuelle.
+truthTable.real_points=Point actuels
+truthTable.predicted_points=Points prévus
 
 # HTMSPoints
 
@@ -652,18 +663,35 @@ HTMSPrediction.changePrediction=Change prediction
 CrossTable.graph=Évolution du classement par journées
 CrossTable.table=Résultats croisés
 # will be shown as "R13" denoting round 13
+CrossTable.noMatches=Personne ne s'est battu.
 
 # MyMonitor
 #following string uses pluralForms
+MyMonitor.add=Suivre cette équipe
 # %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.type.senior=senior
+MyMonitor.type.youth=Jeune
+MyMonitor.type.nt=National
 
 # MarkAllAsRead
+MarkAllAsRead.title=Marquer les fils de toutes les tribunes comme lus
 
 # TickerAlert
+TickerAlert.enable=Permettre
+TickerAlert.sound=Son
 
 # tickers
+ticker.type.welcome=Salutation
+ticker.type.supporter=Connexion d'équipe soutenu
+ticker.type.forum=Réponses de tribune
+ticker.type.transfer=Info de tranfert
+ticker.type.challenge=Défi
+ticker.type.guestbook=Livre d'or
+ticker.type.myht=Mon message de coup de chapeau
 
 # LocalTime
+LocalTime.hattrick=Temps de coup de chapeau
+LocalTime.hattrick.title=Heure dans le fuseau horaire de coup de chapeau. Cliquez sur l'horloge pour passer à l'heure locale.
 
 # Links
 
@@ -671,8 +699,11 @@ CrossTable.table=Résultats croisés
 Copy=Copier
 View=Voir
 Switch_view=Changer de vue
+AddHomegrown=Ajouter les joueurs locaux
+showTimeInClub=Afficher l'heure à l'équipe
 
 # fennec ui
+pageAction.all=Montrer tous
 
 # buttons
 button.customize=Personnaliser
