Experimental: Added Tournaments to rapid-id (not many people will notice it anyway)
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8707 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/foxtrick.properties
+++ b/content/locale/sr/foxtrick.properties
@@ -936,9 +936,6 @@ CurrentBidderShort=Тренутно највише понудио
 CurrentBidderShort.abbr=НП
 
 
-Senior=Сениори
-Youth=Омладинци
-
 team.status.booked=Заказао је пријатељску за ову недељу
 ShowFriendlyBooked.ShowFriendlies=Заказали пријатељску
 
@@ -955,6 +952,10 @@ maximum=Максимум
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 foxtrick.RapidId.ViewById=Претрага по ИД
+Senior=Сениори
+Youth=Омладинци
+Tournaments=Турнири
+Tournament=Турнир
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Приказује целу табелу у посебном прозору.
