Serbian release notes update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8732 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/sr/release-notes.xml
+++ b/content/locale/sr/release-notes.xml
@@ -34,7 +34,7 @@
 <item>● <module>EmbedMedia</module>: Уграђује линковане медија клипове директно у постове на форуму (Catzhoek)</item>
 <item>● <module>HeaderToggle</module>: Омогућава отварање/затварање било којег садржаја на Хеттрик страницама које имају 'h2' заглавље (convincedd)</item>
 <item>● <module>Links</module> и <module>StaffMarker</module> се учитавају директно са <xhtml:a href="http://foxtrick.org">foxtrick.org</xhtml:a> сајта. Захваљујући томе, сада можемо ажурирати линкове без ажурирања Фокстрика</item>
-<item>● Ажурирани подаци које користи <module>StaffMarker</module> за означавање власника CHPP лиценци (Catzhoek)</item>
+<item>● Ажурирани подаци које користи <module>StaffMarker</module> за означавање власника CHPP лиценци и ХТ Прес уредника(Catzhoek)</item>
 <item>● <module>StaffMarker</module>: Када пређете мишем преко надимка власника CHPP лиценце приказују се и називи свих његових апликација (Catzhoek)</item>
 <item>● Линкови за мечеве адаптирани променама на Хеттрику (Catzhoek)</item>
 <item>● Уклоњене опције LeagueChat и HeaderFixFlickerFix (convincedd)</item>
