*manual* locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8744 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.translators=Desarrolladores
 
 # Hints:
 # translate the right side of the = sign.
@@ -57,6 +58,7 @@ foxtrick.TeamPopupLinks.desc=Muestra una pequeña ventana emergente con atajos, 
 foxtrick.StaffMarker.desc=Resaltar los nicks de miembros del staff dentro de la conferencia y página del equipo.
 foxtrick.StaffMarker.manager.desc=Resaltar los nicks de miembros del staff en la página del equipo
 foxtrick.StaffMarker.own.desc=Marcadores personales
+foxtrick.StaffMarker.HT-Youthclub.desc=Resaltar staff de HT-Youthclub
 #ForumYouthIcons
 foxtrick.ForumYouthIcons.desc=Muestra una barra con enlaces para la academia de juveniles (También funciona para correo, anuncios de prensa, libro de visitas y anuncios)
 foxtrick.ForumYouthIcons.q.desc=Añade un icono para las etiquetas de Citar si faltan
@@ -426,6 +428,7 @@ foxtrick.TeamStats.NotTransferListed.label=No en la lista de Trasnferencias
 foxtrick.TeamStats.ActivePlayers.label=Jugadores activos
 foxtrick.TeamStats.HomeGrownPlayers.label=Jugadores canteranos
 foxtrick.TeamStats.PurchasedPlayers.label=Jugadores comprados
+foxtrick.TeamStats.FilterFor=Filtro para
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -531,6 +534,7 @@ Filters.Form=Forma
 Filters.XP=Experiencia
 Filters.specialty=Especialidad
 Filters.stars=Estrellas
+Filters.addFilterOptions=Añade opciones de filtrado
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -697,6 +701,8 @@ Last_stars_decline.abbr=Dif
 Last_position=Latest Posición
 Last_position.abbr=Pos
 #following string uses pluralForms
+Last_match_played_as_at=Jugó %1 minutos como %2 en su último partido en el %3.
+Last_match_didnot_play=No ha jugado todavía.
 
 Bruised=Lastimado
 Bruised.abbr=Las
@@ -929,9 +935,6 @@ CurrentBidderShort=Manager con oferta más alta
 CurrentBidderShort.abbr=MnOf
 
 
-Senior=Mayor
-Youth=Juvenil
-
 team.status.booked=Amistoso pactado
 ShowFriendlyBooked.ShowFriendlies=Mostrar amistosos friendlies
 
@@ -948,6 +951,9 @@ maximum=Máximo
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 foxtrick.RapidId.ViewById=Vista por ID
+Senior=Mayor
+Youth=Juvenil
+Tournaments=Torneos
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Cambiar la vista de la tabla
