--- a/content/locale/fi/foxtrick.properties
+++ b/content/locale/fi/foxtrick.properties
@@ -1,7 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
 
-
 # Hints:
 # translate the right side of the = sign.
 # the left side are idenitifiers for internal foxtrick use. leave them unchanged.
@@ -629,7 +628,7 @@ match.pos.rw.abbr=OL
 match.pos.lf=vasen hyökkääjä
 match.pos.lf.abbr=VH
 match.pos.mf=keskimmäinen hyökkääjä
-match.pos.mf.abbr=KK
+match.pos.mf.abbr=KH
 match.pos.rf=oikea hyökkääjä
 match.pos.rf.abbr=OH
 
@@ -930,9 +929,6 @@ CurrentBidderShort=Korkein nykyinen tarjous
 CurrentBidderShort.abbr=Kt
 
 
-Senior=Edustus
-Youth=Juniori
-
 team.status.booked=Ystävyysottelu sovittu
 ShowFriendlyBooked.ShowFriendlies=Näytä ystävyysottelut
 
@@ -949,6 +945,10 @@ maximum=Enintään
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 foxtrick.RapidId.ViewById=Katso ID\:llä
+Senior=Edustus
+Youth=Juniori
+Tournaments=Turnaukset
+Tournament=Turnaus
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Vaihda taulukon näkymää
