--- a/content/locale/hu/foxtrick.properties
+++ b/content/locale/hu/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.language=Magyar fordítás
 
 # Hints:
 # translate the right side of the = sign.
@@ -77,6 +78,7 @@ foxtrick.FormatPostingText.desc=A FoxTrick HT-ML-tageket HTML-tagekre (azaz „p
 foxtrick.CopyPostID.desc=Hozzáad egy hivatkozást egy hozzászólás számának kimásolásához
 foxtrick.CopyPosting.desc=Hozzáad egy ikont a hozzászólásnak a referenciákkal együtt történő kimásolásához
 foxtrick.ShowForumPrefButton.desc=A fórumbeállításokra mutat a fórumoldalakon
+foxtrick.Links.desc=Az alap modul elengedhetetlen a többi linkmodul megfelelő működéséhez.
 foxtrick.LinksLeague.desc=Külső hivatkozásokat ad a bajnoki oldalhoz
 foxtrick.LinksTeam.desc=Külső hivatkozásokat ad a csapat főoldalához
 foxtrick.LinksCountry.desc=Külső hivatkozásokat ad az ország oldalához
@@ -87,6 +89,7 @@ foxtrick.LinksYouthTraining.desc=Külső hivatkozásokat ad az ificsapat Edzése
 foxtrick.LinksYouthPlayerDetail.desc=Külső hivatkozásokat ad az ifijátékosok adatlapjához
 foxtrick.LinksYouthPlayerList.desc=Külső hivatkozásokat ad az Ifijátékosok oldalhoz
 foxtrick.LinksYouthMatchList.desc=Külső hivatkozásokat ad az Ifimérkőzések oldalhoz
+foxtrick.LinksYouthLeague.desc=Néhány külső hivatkozás hozzáadása az ifibajnokságok oldalára
 foxtrick.LinksArena.desc=Külső hivatkozásokat ad a Stadion oldalhoz
 foxtrick.LinksCoach.desc=Külső hivatkozásokat ad az Edzőcsere oldalhoz
 foxtrick.LinksPlayerDetail.desc=Külső hivatkozásokat ad a játékosok adatlapjához
@@ -117,6 +120,8 @@ foxtrick.ForumAlterHeaderLine.HighlightThreadOpener.desc=Kiemeli a topiknyitó a
 foxtrick.AddDefaultFaceCard.desc=Alapértelmezett arcképet társít a fórumban azokhoz a felhasználókhoz, akik nem választottak maguknak avatart
 foxtrick.OriginalFace.desc=Megjeleníti a játékosok rendes arcképét
 foxtrick.OriginalFace.HideTransfer.desc=Elrejti a játékosok eltiltáskor látható arcképét
+foxtrick.OriginalFace.HideInjury.desc=A sérüléseket ábrázoló képek elrejtése az arcképekről
+foxtrick.OriginalFace.HideSuspended.desc=Az eltiltásokat ábrázoló képek elrejtése az arcképekről
 foxtrick.OriginalFace.ColouredYouth.desc=Színesben jeleníti meg az ifijátékosok arcképét (Windows Vista használata esetén problémákat okozhat)
 foxtrick.ConfirmActions.desc=A felhasználó engedélyét kéri bizonyos műveletekhez
 foxtrick.ConfirmActions.Bid.desc=Licitáláskor
@@ -126,6 +131,7 @@ foxtrick.ConfirmActions.StaffChange.desc=Személyzet felvételekor/elbocsátása
 foxtrick.PersonalityImages.desc=Színes számokat jelenít meg az együttműködő készség, a becsületesség és az agresszivitás tulajdonságok mellett a játékosok adatlapján
 foxtrick.HideSignatures.desc=Elrejti a fórumaláírásokat, helyettük egy „Aláírás” hivatkozást jelenít meg
 foxtrick.MarkUnread.desc=Egy hivatkozást illeszt be, amire kattintva minden beírást olvasatlannak jelöl meg attól kezdve, ahol épp állsz
+foxtrick.ForumModeratorIconLinks.desc=Ikonok hozzáadása a moderátori funkciókhoz a szálak tetejére, ha elérhetőek
 foxtrick.ForumNextAndPrevious.desc=Eltünteti az „Előző” és „Következő” feliratú gombokat a fórumtopikokban, ha azok nem aktívak
 foxtrick.ForumLastPost.desc=Az olvasott témák első hozzászólása helyett az utolsóra ugrik
 foxtrick.ForumLastPost.lastpage.desc=Az utolsó oldalra, nem pedig az utolsó hozzászólásra ugrik
@@ -347,6 +353,7 @@ foxtrick.TeamStats.TransferListed.label=Piacon van
 foxtrick.TeamStats.Pictures.label=Arcképek
 foxtrick.TeamStats.PlayedLatest.label=Játszott a legutóbbi mérkőzésen
 foxtrick.TeamStats.NotPlayedLatest.label=Nem játszott a legutóbbi mérkőzésen
+foxtrick.TeamStats.HomeGrownPlayers.label=Saját nevelésű játékosok
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -411,6 +418,8 @@ ForumYouthIcons.youthteamid=Ificsapat-azonosító beszúrása
 ForumYouthIcons.youthmatchid=Ifimeccs-azonosító beszúrása
 ForumYouthIcons.youthseries=Ifibajnokság-azonosító beszúrása
 
+ForumOtherIcons.debug=Foxtrick hibakeresési napló beszúrása.
+ForumOtherIcons.settings=Foxtrick beállítások beszúrása.
 
 #special bbcode, not really youth icons
 ForumSpecialBBCode.q=Idézet beszúrása
@@ -424,6 +433,8 @@ ForumSpecialBBCode.pre=„Pre” formázóelem beillesztése
 ForumSpecialBBCode.table=„Táblázat” formátumú címkék beillesztése, amelyek a kijelölt szöveget táblázattá alakítják (a szövegsorokat táblázatsorokká, az ezzel\: „%s” elválasztott szöveget pedig cellákká).
 ForumSpecialBBCode.tableSeparator=A(z) „%s” cellákká alakítása
 ForumSpecialBBCode.enterSeparator=Egyéni elválasztó beszúrása
+ForumSpecialBBCode.forumSymbol="%s" beszúrása
+ForumSpecialBBCode.symbols=Szimbólum beszúrása\: %s
 
 
 
@@ -434,6 +445,18 @@ foxtrick.transferfilter.save_new_filter=Az új szűrő mentése
 foxtrick.transferfilter.Foxtrick_Filters=FoxTrick-szűrők
 
 #Filter
+Filters=Szűrők
+Filters.filter=Ok
+Filters.clear=Törlés
+Filters.noFilter=Nincs szűrő
+Filters.none=Nincs
+Filters.days=Napok
+Filters.tsi=TSI
+Filters.stamina=Erőnlét
+Filters.Form=Forma
+Filters.XP=Tapasztalat
+Filters.specialty=Specialitás
+Filters.stars=Csillagok
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -449,7 +472,26 @@ foxtrick.datetimestrings.short_days=n
 transfercompare_medianprice=Középár
 transfercompare_avgprice=Átlagár
 
+match.type.league=Bajnoki
+match.type.qualification=Osztályozó
+match.type.cup=Kupa
+match.type.friendly=Barátságos
+match.type.friendly.cup=Barátságos (kupaszabályokkal)
+match.type.masters=Hattrick Masters
+match.type.nt.friendly=Hazai barátságos
+match.type.nt.competitive=Világbajnokság
+match.type.youth.league=Ifibajnokság
+match.type.youth.friendly=Ifi barátságos
+match.type.youth.friendly.cup=Ifi barátságos (kupaszabályokkal)
 
+matchOrder.noMatchSelected=Nincs mérkőzés kiválasztva
+matchOrder.comparedTo=Összehasonlítva ezzel\:
+matchOrder.previousPrediction=Korábbi előrejelzés
+matchOrder.AddMatchManually=Mérkőzés hozzáadása kézzel
+matchOrder.swapPositions=Pozíciók cseréje
+matchOrder.options=Beállítások
+matchOrder.staminaDiscount=Erőnlét kedvezmény
+matchOrder.summary=Összefoglaló
 
 #Skills
 Playmaking=Játékszervezés
@@ -467,6 +509,8 @@ Keeper.abbr=KV
 Set_pieces=Pontrúgás
 Set_pieces.abbr=PR
 
+PsicoTSI=PsicoTSI (átlagos forma)
+PsicoTSI.abbr=Psico
 HTMS_Ability=HTMS-pontképesség
 HTMS_Ability.abbr=Képesség
 HTMS_Potential=HTMS-pontlehetőség
@@ -486,8 +530,41 @@ categories.R=T
 categories.E1=Ku
 categories.E2=Ko
 
+match.pos.kp=Kapus
+match.pos.kp.abbr=KA
+match.pos.lb=Bal szélső hátvéd
+match.pos.lb.abbr=BSZH
+match.pos.lcd=Baloldali középső védő
+match.pos.lcd.abbr=BKH
+match.pos.mcd=Középső középhátvéd
+match.pos.mcd.abbr=KKH
+match.pos.rcd=Jobboldali középhátvéd
+match.pos.rcd.abbr=JKH
+match.pos.rb=Jobb szélső hátvéd
+match.pos.rb.abbr=JSZH
+match.pos.lw=Bal szélső
+match.pos.lw.abbr=BSZ
+match.pos.lcm=Baloldali középpályás
+match.pos.lcm.abbr=BKP
+match.pos.mcm=Középső középpályás
+match.pos.mcm.abbr=Középső középpályás
+match.pos.rcm=Jobboldali középpályás
+match.pos.rcm.abbr=JKP
+match.pos.rw=Jobb szélső
+match.pos.rw.abbr=JSZ
+match.pos.lf=Baloldali csatár
+match.pos.lf.abbr=BCS
+match.pos.mf=Középső csatár
+match.pos.mf.abbr=KCS
+match.pos.rf=Jobboldali csatár
+match.pos.rf.abbr=JCS
 
+match.role.setPieces=Pontrúgó
+match.role.setPieces.abbr=PR
+match.role.captain=Csapatkapitány
+match.role.captain.abbr=CSK
 
+match.player.unknown=Ismeretlen játékos
 
 General=Általános
 
@@ -496,6 +573,8 @@ PlayerNumber=Mezszám
 TSI=Total Skill Index
 TSI.abbr=TSI
 
+CanBePromotedIn=Felvihető
+CanBePromotedIn.abbr=Fel
 
 Personality=Személyiség
 Agreeability=Együttműködőkészség
@@ -515,6 +594,10 @@ Stamina.abbr=Erő.
 Form=Forma
 Form.abbr=Fo.
 
+Loyalty=Hűség
+Loyalty.abbr=Hű
+MotherClubBonus=Anyacsapati bónusz
+MotherClubBonus.abbr=AB
 
 Status=Státusz
 Status.abbr=Státusz
@@ -531,9 +614,11 @@ Last_match=A legutóbbi mérkőzés
 Last_match.abbr=Ut. mérk.
 Last_stars=A legutóbbi értékelés
 Last_stars.abbr=Ut. ért.
+Last_stars_decline.abbr=Kül.
 Last_position=A legutóbbi poszt
 Last_position.abbr=Ut. poszt
 #following string uses pluralForms
+Last_match_played_as_at=%1 percet játszott %2 pozícióban a legutóbbi mérkőzésén, ekkor\: %3.
 
 Bruised=Tapaszos
 Bruised.abbr=Tap.
@@ -564,8 +649,12 @@ Current_club.abbr=Klub
 Current_league=jelenlegi bajnokság
 Current_league.abbr=Bajn.
 
+JoinedSince.abbr=Amióta
 
+Hotlist=Gyorslista
 
+skilltable.youthplayer=ifijátékos
+skilltable.rebought_youthplayer=Visszavásárolt ifijátékos
 
 #matchdetail
 foxtrick.matchdetail.midfield=Középpálya
@@ -623,6 +712,7 @@ foxtrick.modules_allpages=Minden oldalon érvényes modulműködés
 HTLanguageChanged=A FoxTrick azt érzékelte, hogy módosítottad a nyelvet. A FoxTrick nyelve jelenleg a(z) %s.
 
 Coach=Edző
+CurrentSquad=Aktuális keret
 
 # NOTE TO TRANSLATORS
 # Look on your Manager page (Club -> Manager) to the top right box title to see how you should translate the string below
@@ -643,8 +733,27 @@ CopyRatings.home=A hazai csapat értékeléseinek másolása (HT-ML-ben)
 CopyRatings.away=A vendégcsapat értékeléseinek másolása (HT-ML-ben)
 CopyRatings.copied=Az értékeléseket vágólapra másoltad.
 
+CopyYouth.trainingReport=Edzésjelentés másolása
+CopyYouth.trainingReport.copied=Edzésjelentés másolva.
+CopyYouth.scoutComment=Játékosmegfigyelő jelentésének másolása
+CopyYouth.scoutComment.copied=A játékosmegfigyelő jelentése másolva lett.
+CopyYouth.playerSource=Játékos forrásának másolása
+CopyYouth.playerSource.copied=A játékos forrása másolva lett.
+CopyYouth.fixturesSource=Mérkőzések forrásának másolása
+CopyYouth.fixturesSource.copied=Mérkőzések forrása másolva lett.
+CopyYouth.goto=Ugrás\: %s
 
+MatchReportFormat.MatchReport=Meccsriport
+MatchReportFormat.lineup=Felállás
+MatchReportFormat.kickOff=Kezdőrúgás
+MatchReportFormat.halfTime=Félidő
+MatchReportFormat.fullTime=Meccs vége
+MatchReportFormat.extraTime=Hosszabbítás
+MatchReportFormat.penaltyShootOut=Tizenegyespárbaj
+MatchReportFormat.result=Eredmény
 
+CopySelected.desc=Kijelölés másolása\: Ctrl + C.
+SpecialPaste.desc=Beillesztés Shift + bal kattintás együtt.
 
 foxtrick.tweaks.youthclub=hattrick-youthclub.org
 foxtrick.tweaks.copyskilltable=A képességek vágólapra másolása (HT-ML-ben)
@@ -652,6 +761,7 @@ foxtrick.tweaks.skilltablecopied=A képességtáblázat forráskódját vágóla
 foxtrick.tweaks.matchidcopied=A mérkőzésazonosítót vágólapra másoltad.
 foxtrick.tweaks.postidcopied=A hozzászólás azonosítóját [hozzászólás\=%s] vágólapra másoltad.
 foxtrick.tweaks.postingcopied=A következő hozzászólást\: %s vágólapra másoltad.
+foxtrick.tweaks.youthstatistics=Ifi statisztikák ht-ys.org
 
 #matches
 foxtrick.matches.attackdefensebars=Támadás kontra védekezés
@@ -695,6 +805,7 @@ less=kevesebb információ...
 TeamPopupLinks.prefsCaption=Hivatkozásokra vonatkozó beállítások
 TeamPopupLinks.ShowByDefault=Megjelenítés alapértelmezettként
 TeamPopupLinks.ShowOnMore=Továbbiak megjelenítése
+TeamPopupLinks.OpenNewTab=Megnyitás új lapon
 
 total_stars=Összes csillag
 
@@ -722,6 +833,8 @@ Age.abbr=Kor
 Match=Mérkőzés
 Series=Bajnokság
 
+TransferCompare=Árbecslés
+TransferCompare.abbr=Árbecsl.
 Bookmark=Kedvencek
 Bookmark.abbr=Ked
 Deadline=Határidő
@@ -734,12 +847,14 @@ CurrentBidderShort=A legmagasabb licit
 CurrentBidderShort.abbr=Mlic
 
 
-Senior=Felnőtt
-Youth=Ifi
-
+team.status.booked=Barátságos meccs lekötve
+ShowFriendlyBooked.ShowFriendlies=Barátságos mérkőzések megjelenítése
 
 
 # TransferSearchResultFilters
+TransferSearchResultFilters.hideBruised=Tapaszosok elrejtése
+TransferSearchResultFilters.hideInjured=Sérültek elrejtése
+TransferSearchResultFilters.hideSuspended=Eltiltottak elrejtése
 TransferSearchResultFilters.days=Napok\:
 
 # refer to transfer search form
@@ -748,16 +863,30 @@ maximum=Legfeljebb
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 foxtrick.RapidId.ViewById=Megtekintés az azonosító alapján
+Senior=Felnőtt
+Youth=Ifi
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=A táblázat nézetének felcserélése
+foxtrick.SkillTable.showTimeInClub_title=Mutassa az időt, amióta a játékos csatlakozott a nagycsapathoz
+foxtrick.SkillTable.detach=Leválasztás
 
 # HTMSPrediction
 HTMSPrediction.prediction=Becsült eredmény
+HTMSPrediction.winDrawLoss=Győzelem/döntetlen/vereség
 HTMSPrediction.title=Mérkőzéselemzés HTMS segítségével
 HTMSPrediction.changePrediction=A becslés módosítása
+HTMSPrediction.team=Csapat
 
 #htms table of statistical truth
+truthTable.table=A statisztikai igazság HTMS táblázata
+truthTable.predicted_position=\#
+truthTable.name=Csapat
+truthTable.real_position=Valódi poz.
+truthTable.real_points=Megszerzett pontok
+truthTable.predicted_points=Tipp. pontok
+truthTable.difference=±
+truthTable.tableAtHTMS=Ez a tábla a HTMS weboldalon
 
 # HTMSPoints
 HTMSPoints=HTMS-pontok\:
@@ -773,25 +902,59 @@ CrossTable.noMatches=Még nincsenek lejátszott mérkőzések.
 # MyMonitor
 MyMonitor.header=Figyelő
 #following string uses pluralForms
+MyMonitor.add=Csapat megfigyelése
+MyMonitor.remove=A csapat eltávolítása a megfigyelőlistámról
+MyMonitor.addHelp=Menj annak a csapatnak az oldalára amit követni kívánsz, az oldalsó menüben láthatsz egy dobozt ahol hozzá lehet adni a megfigyeltekhez.
 MyMonitor.removeTeam=Jelöld ki az eltávolítani kívánt csapatot\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
+MyMonitor.removeTeamFormat=%n (%t, \#%i)
+MyMonitor.type.senior=Felnőtt
+MyMonitor.type.youth=Ifi
+MyMonitor.type.nt=Nemzeti
 
 # MarkAllAsRead
+MarkAllAsRead.title=Minden szál olvasottnak jelölése minden fórumban
 
 # TickerAlert
+TickerAlert.enable=Engedélyezés
+TickerAlert.sound=Hang
 
 # tickers
+ticker.type.welcome=Üdvözlő üzenet
+ticker.type.supporter=Támogatott csapat belépett
+ticker.type.forum=Fórum válasz
+ticker.type.transfer=Átigazolási információ
+ticker.type.challenge=Kihívás
+ticker.type.guestbook=Vendégkönyv
+ticker.type.mail=HT-Mail
+ticker.type.myht=Hattrick üzenet
+ticker.type.others=Egyéb
 
 # LocalTime
+LocalTime.hattrick=Hattrick idő
+LocalTime.hattrick.title=Idő a Hattrick idő szerint. Kattins az órára a helyi időre váltáshoz.
+LocalTime.local=Helyi idő
+LocalTime.local.title=Idő a helyi időzóna szerint. Kattins az órára a Hattrick időre váltáshoz.
 
 # Links
+Links.feeds=Linklisták forrása (sortörésekkel elválasztva)
 
 #actions
 Copy=Másolás
 View=Megtekintés
 Switch_view=A nézet felcserélése
+Detach=Leválasztás
+showTimeInClub=Mutassa a klubban töltött időt
+sort.up=Fel
+sort.down=Le
+action.clearCache=A gyorsítótár ürítése
+featureHighlight.title=Kattintson a legtöbb Foxtrick szolgáltatás kiemeléséhez
 
 # fennec ui
+pageAction.rightSidebar=Jobb hasáb megjelenítése
+pageAction.mainContent=Fő tartalom megjelenítése
+pageAction.leftSidebar=Bal hasáb mutatása
+pageAction.all=Az összes megjelenítése
 
 # buttons
 button.ok=OK
@@ -898,5 +1061,6 @@ foxtrick.prefs.AdditionalOptions=További beállítási lehetőségek
 foxtrick.prefs.smallcopyicons=A másolás ikonok megjelenítése a fejlécben az oldalsáv helyett
 foxtrick.prefs.DisplayHTMLDebugOutput=További hibamentesítő kimenetet jelenít meg a Hattrick oldalainak alján (fejlesztőknek)
 
+foxtrick.prefs.permissionsHint=A következőnek\: %s engedélyre van szüksége a működéshez. Engedélyezd a hozzáférést a következő dialógusban. Ha elutasítod, akkor ennek a modulnak a funkcionalitása le lesz tiltva.
 
 ###EOF
