--- a/content/locale/it/foxtrick.properties
+++ b/content/locale/it/foxtrick.properties
@@ -936,9 +936,6 @@ CurrentBidderShort=Miglior offerente
 CurrentBidderShort.abbr=Off
 
 
-Senior=Prima squadra
-Youth=Giovanili
-
 team.status.booked=Amichevole organizzata
 ShowFriendlyBooked.ShowFriendlies=Mostra amichevoli
 
@@ -955,6 +952,10 @@ maximum=Massimo
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 foxtrick.RapidId.ViewById=Cerca ID
+Senior=Prima squadra
+Youth=Giovanili
+Tournaments=Tornei
+Tournament=Torneo
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Cambia la vista della tabella.
