--- a/content/locale/ko/foxtrick.properties
+++ b/content/locale/ko/foxtrick.properties
@@ -936,9 +936,6 @@ CurrentBidderShort=현재 가장 높은 입찰자
 CurrentBidderShort.abbr=입찰자
 
 
-Senior=성인
-Youth=유소년
-
 team.status.booked=친선 예약됨
 ShowFriendlyBooked.ShowFriendlies=친선 예약 상태 표시
 
@@ -955,6 +952,10 @@ maximum=최대
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 foxtrick.RapidId.ViewById=ID로 보기
+Senior=성인
+Youth=유소년
+Tournaments=토너먼트
+Tournament=토너먼트
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=테이블보기 전환.
