--- a/content/locale/lv/foxtrick.properties
+++ b/content/locale/lv/foxtrick.properties
@@ -368,6 +368,7 @@ Last_stars_decline.abbr=Starp
 Last_position=Pēdējā pozīcija
 Last_position.abbr=Poz
 #following string uses pluralForms
+Last_match_played_as_at=%3 nospēlēja %1 minūtes kā %2.
 Last_match_didnot_play=Vēl nav spēlējis.
 
 Injured=Savainots
@@ -591,9 +592,6 @@ CurrentBidder.abbr=Solītājs
 CurrentBidderShort=Solītājs
 
 
-Senior=Pieaugušo
-Youth=Jaunieši
-
 team.status.booked=Draudzības spēles sarunāta
 ShowFriendlyBooked.ShowFriendlies=Parādīt draudzības spēles
 
@@ -610,6 +608,8 @@ maximum=Maksimālais
 
 # Rapid ID. maximum like 11 characters or it messes up simple skin 'right now'
 foxtrick.RapidId.ViewById=Atrast pēc ID
+Senior=Pieaugušo
+Youth=Jaunieši
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Mainīt tabulas skatu.
