--- a/content/locale/sl/foxtrick.properties
+++ b/content/locale/sl/foxtrick.properties
@@ -1,5 +1,6 @@
 #X-Generator: crowdin.net
 #used by translators to keep track. not used with foxtrick atm
+properties.translators=Razvijalci
 
 # Hints:
 # translate the right side of the = sign.
@@ -18,9 +19,12 @@ pluralFormRuleID=pluralFormRule10
 # Module descriptions
 # WARNING: your module description has to have the name foxtrick.MODULE_NAME.desc
 #AttVsDef
+foxtrick.AttVsDef.desc=Doda primerjavo napad/obramba na stran s tekmo
 foxtrick.AttVsDef.oldstyle.desc=stari slog
 foxtrick.AttVsDef.newstyle.desc=nov slog
 #Ratings
+foxtrick.Ratings.desc=Doda ocene na stran s tekmo
+foxtrick.Ratings.HideAverages.desc=Skrij povprečne ocene
 foxtrick.Ratings.HatStats.desc=HatStats
 foxtrick.Ratings.HatStatsDetailed.desc=HatStats (podrobno)
 foxtrick.Ratings.HatStatsSeparated.desc=HatStats ločeni na oceno
@@ -33,6 +37,7 @@ foxtrick.Ratings.GardierStats.desc=GardierStats
 foxtrick.StaffMarker.HT-Youthclub.desc=Označi HT-Youthclub osebje
 #ForumYouthIcons
 #FormatPostingText
+foxtrick.FormatPostingText.NestedQuotesAsSpoilers.desc=Prikaže ugnezdene citate v skrivaču. Navedite stopnjo spodaj.
 #EmbedMedia
 foxtrick.EmbedMedia.EmbedSoundCloud.desc=Vgnezdi Soundcloud
 foxtrick.EmbedMedia.EmbedFlickrImages.desc=Vgnezdi slike s Flickra
@@ -116,6 +121,7 @@ foxtrick.ShowLineupSet.Winning.desc=Poudari zmagovalno ekipo
 foxtrick.SupporterStatsEnhancements.desc=Poudari trenutno ekipo v statistiki suporterjev
 foxtrick.MobileEnhancements.desc=Nabor izboljšav za mobilne naprave
 foxtrick.MatchOrderInterface.Specialties.desc=Pokaži posebnosti igralcev
+foxtrick.MatchSimulator.RatingsBelow.desc=Prikaži napovedi spodaj
 foxtrick.RatingsDisplay.desc=Prikaže povprečne ocene v drugačnem slogu
 
 # -----------------------------------------------------------------------------
@@ -233,6 +239,7 @@ Filters.Form=Pripravljenost
 Filters.XP=Izkušnje
 Filters.specialty=Posebnost
 Filters.stars=Zvezdice
+Filters.addFilterOptions=Dodaj možnosti filtra
 
 #Locales for date and time
 #Very short strings are needed. Have a look on search results on the transfer list. The table cell may not break!
@@ -347,6 +354,7 @@ Last_match=Zadnja tekma
 Last_position=Najnovejši položaj
 Last_position.abbr=Pos
 #following string uses pluralForms
+Last_match_didnot_play=Še ni igral.
 
 Bruised=Obtolčen
 Bruised.abbr=Bru
@@ -416,6 +424,7 @@ foxtrick.copymatchid=Kliknite, če želite kopirati matchID v odložišče
 
 
 #following string uses pluralForms
+notify.newMail=Prejeli ste %s sporočilo.;Prejeli ste %s sporočili.;Prejeli ste %s sporočila.;Prejeli ste %s sporočil.
 #following string uses pluralForms
 
 htLive=HT Live
@@ -532,7 +541,6 @@ CurrentBidder.abbr=Ponudnik
 CurrentBidderShort=Trenutno najvišji ponudnik
 
 
-
 team.status.booked=Prijateljska tekma organizirana
 ShowFriendlyBooked.ShowFriendlies=Pokaži prijateljske tekme
 
@@ -580,7 +588,9 @@ CrossTable.graph=Graf sezone
 CrossTable.noMatches=Nobena tekma še ni bila odigrana.
 
 # MyMonitor
+MyMonitor.header=Moj monitor
 #following string uses pluralForms
+MyMonitor.teams=%s ekipa v monitorju;%s ekipi v monitorju;%s ekipe v monitorju;%s ekip v monitorju
 MyMonitor.add=Spremljaj to ekipo
 MyMonitor.removeTeam=Izberite ekipo, ki jo želite odstraniti\:
 # %n, %t and %i will be replaced by team name, type and ID respectively
@@ -620,6 +630,7 @@ Copy=Kopiraj
 View=Pogled
 Switch_view=Preklopi pogled
 Detach=Odpni
+AddHomegrown=Dodaj doma vzgojene igralce
 showTimeInClub=Pokaži čas v klubu
 sort.up=Gor
 sort.down=Dol
@@ -678,10 +689,25 @@ status.active=aktivno
 #tabs
 tab.forum=Forum
 
+foxtrick.prefs.setup.dateFormat=Oblika datuma
+foxtrick.prefs.setup.country=Država
 
+foxtrick.prefs.captionCleanupBranch=Shranjene nastavitve
 # NOTE - please preserve the braces, inner content will be converted to link
+foxtrick.prefs.labelDisableAll=Onemogoči vse module
+foxtrick.prefs.labelRevokePermissions=Prekliči vsa neobvezna dovoljenja (samo Chrome)
+foxtrick.prefs.labelSavePrefs=Izvoz nastavitev in/ali osebnih nastavitev
+foxtrick.prefs.labelSavePrefs_Prefs=Nastavitve
+foxtrick.prefs.labelSavePrefs_Notes=Osebne nastavitve (predloge, povezave po meri in filtri prestopov)
+foxtrick.prefs.labelSavePrefs_Token=OAuth žeton/skrivnost
+foxtrick.prefs.captionDisableSettings=Onemogoči FoxTrick
+foxtrick.prefs.stagepref=Onemogoči na Stage strežniku
+foxtrick.prefs.disableTemporaryLabel=Začasno onemogoči
+foxtrick.prefs.saved=Nastavitve shranjene\!
 foxtrick.prefs.loaded=Nastavitve naložene\!
+foxtrick.prefs.dismissNotice=(kliknite za opustitev tega obvestila)
 
+pref.xmlLoad=Naloži XML-je za dodatne informacije iz Hattricka
 
 link.title=Povezave
 link.homepage=Domača stran
@@ -701,7 +727,11 @@ about.designers=Oblikovalci
 
 prefs.view.by.category=Pogled po kategorijah
 
+delete_foxtrick_branches_ask=Ali ste prepričani, da želite obnoviti privzete nastavitve?
+disable_all_foxtrick_modules_ask=Ali ste prepričani, da želite onemogočiti vse module?
+revoke_permissions_ask=Ali ste prepričani, da želite preklicati vsa neobvezna dovoljenja?
 
+foxtrick.prefs.AdditionalOptions=Splošne možnosti
 
 
 ###EOF
