*automated* crowdin locale update
git-svn-id: https://foxtrick.googlecode.com/svn/trunk@8750 1e3807c3-0949-0410-b78e-337b627472c1

--- a/content/locale/es-CR/foxtrick.properties
+++ b/content/locale/es-CR/foxtrick.properties
@@ -954,6 +954,7 @@ foxtrick.RapidId.ViewById=Vista por ID
 Senior=Mayor
 Youth=Juvenil
 Tournaments=Torneos
+Tournament=Torneo
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Cambiar la vista de la tabla
