--- a/content/locale/de/foxtrick.properties
+++ b/content/locale/de/foxtrick.properties
@@ -76,6 +76,7 @@ foxtrick.ForumYouthIcons.youth_series.desc=Icon für YouthSeriesID hinzufügen
 foxtrick.ForumYouthIcons.enlarge_input.desc=Vergrößern von Textboxen für besseres Schreiben
 foxtrick.ForumYouthIcons.pre.desc=Icon für Forum 'pre'-Format hinzufügen
 foxtrick.ForumYouthIcons.table.desc=Icon für Forum 'table'-Format hinzufügen
+foxtrick.ForumYouthIcons.symbols.desc=Fügt ein Icon für folgende Symbole hinzu. Einträge werden getrennt durch Semikolons. Um ein Semikolon zuzufügen benutze "/;".
 foxtrick.ForumYouthIcons.debug.desc=Icon für FoxTrick debug log hinzufügen
 foxtrick.ForumYouthIcons.settings.desc=Icon für Foxtrickeinstellungen hinzufügen
 #FormatPostingText
@@ -100,6 +101,7 @@ foxtrick.DirectPageLinks.desc=Fügt Links bei mehrseitigen Threads ein, welche e
 foxtrick.CopyPostID.desc=Kopiert die PostId in die Zwischenablage anstelle die komplette ID anzuzeigen
 foxtrick.CopyPosting.desc=Hinzufügen eines Icons für das Kopieren eines Postings incl. der Referenzen
 foxtrick.ShowForumPrefButton.desc=Anzeige des Link-Icons für die Foreneinstellungen auf jeder Foren-Seite
+foxtrick.Links.desc=Notwendiges Grundmodul für die anderen Linkmodule
 foxtrick.LinksLeague.desc=Links hinzufügen auf der Liga-Seite
 foxtrick.LinksTeam.desc=Links hinzufügen auf der Verein-Seite
 foxtrick.LinksCountry.desc=Links hinzufügen auf der Länder-Seite
@@ -125,6 +127,7 @@ foxtrick.LinksAchievements.desc=Links hinzufügen zur Errungenschaften-Seite
 foxtrick.LinksStaff.desc=Links hinzufügen zur Spezialisten-Seite
 foxtrick.LinksTracker.desc=Links zu externen Trackern auf den betreffenden NT- und Spieler-Seiten
 foxtrick.LinksClubTransfers.desc=Links zu externen Seiten im Bereich der Transferseite
+foxtrick.LoyaltyDisplay.desc=Hebt den Effekt von Loyalität und Heimatvereinsbonus auf deinen Spielerseiten hervor (falls "Fähigkeitsbalken anzeigen" der Hattrick Optionen aktiviert ist)
 foxtrick.ForumAlterHeaderLine.desc=Veränderungen des Postingkopfes
 foxtrick.Singleline2.desc=Alternatives einzeiliges Postingkopf Modul. Ein wenig schneller als die andere Version. Deaktiviert einige ChangePosting-Module, welche miteinander in Konflikt stehen.
 # please translate next lines again if needed
@@ -343,6 +346,7 @@ foxtrick.HTMSPoints.desc=Anzeige der Trainingspunkte für einen Spieler laut HTM
 foxtrick.HTMSPoints.AddToPlayer.desc=Anzeige auf der Spieler-Seite
 foxtrick.HTMSPoints.AddToSearchResult.desc=Anzeige auf der Trefferseite der Transfersuche
 foxtrick.HTMSPoints.AddToPlayerList.desc=Anzeiger auf der Seite der Spielerliste
+foxtrick.TableOfStatisticalTruth.desc=Statistische Vorhersage der finalen Tabellenpositionen (nur für beendete Saisons)
 foxtrick.FriendlyInterface.desc=Bereitstellen eines freundlicheren Nutzerinterfaces
 foxtrick.FriendlyInterface.FullPlayerNameInLineUp.desc=Anzeige der Spielernamen ohne Ellipse auf der Aufstellungsseite
 foxtrick.FriendlyInterface.NtLinkForNtPlayer.desc=Anzeige der Nationalmannschaften als Links bei Nationalspielern
@@ -359,9 +363,20 @@ foxtrick.ShowLineupSet.LineupSet.desc=Hervorheben von gesetzten Aufstellungen
 foxtrick.ShowLineupSet.Ownerless.desc=Hervorheben von Vereinen ohne Besitzer
 foxtrick.ShowLineupSet.Winning.desc=Hervorheben von Gewinners
 foxtrick.SupporterStatsEnhancements.desc=Markierung für Spieler des aktuellen Teams in den Supporterstatistiken
+foxtrick.MobileEnhancements.desc=Set von Erweiterungen für mobile Geräte
 foxtrick.MatchOrderInterface.desc=Verbesserungen der Aufstellungsseite
+foxtrick.MatchOrderInterface.PlayedLastMatch.desc=Hebt Spieler hervor, die im letzten Spiel gespielt haben, und zeigt ihre Position und Spieldauer in der Spielerdetailsbox an 
 foxtrick.MatchOrderInterface.Specialties.desc=Zeige Spezialfähigkeiten
+foxtrick.MatchOrderInterface.StayOnPage.desc=Nach dem Speichern auf der Aufstellungsseite bleiben
+foxtrick.MatchOrderInterface.SwapPositions.desc=Fügt die Möglichkeit die Spielerpositionen zu spiegeln hinzu
+foxtrick.MatchSimulator.desc=Fügt einen Spielsimulator der Aufstellungsseite zu
+foxtrick.MatchSimulator.RatingsOnTop.desc=Die Bewertungsvorhersage als Overlay (HT Standard)
+foxtrick.MatchSimulator.RatingsBelow.desc=Anzeige der Vorhersage unter dem Interface
+foxtrick.MatchSimulator.RatingsRight.desc=Anzeige der Vorhersage rechts des Interfaces
+foxtrick.HeaderToggle.desc=Auf h2-Überschriften klicken wechselt zwischen Anzeigen und Verbergen des zugehörigen Bereiches. Die letzte Einstellung wird sich dabei gemerkt basierend auf Typ der Seite und Überschrift. 
 foxtrick.Filter.desc=Fügt oben auf der Spielerseite die Möglichkeit hinzu, die Spieler nach gewissen Kriterien zu filtern
+foxtrick.RatingsDisplay.desc=Stellt die durchschnittlichen Bewertungen in alternativer Weise dar
+foxtrick.RatingsDisplay.DenominationsRange.desc=Im 0-20 Wertebereich von Hattrick
 foxtrick.RatingsDisplay.HatStats.desc=Als HatStats
 
 # -----------------------------------------------------------------------------
@@ -414,6 +429,7 @@ foxtrick.TeamStats.NotTransferListed.label=Nicht transfergelistet
 foxtrick.TeamStats.ActivePlayers.label=Aktive Spieler
 foxtrick.TeamStats.HomeGrownPlayers.label=Eigengewächse
 foxtrick.TeamStats.PurchasedPlayers.label=Gekaufte
+foxtrick.TeamStats.FilterFor=Filtern nach
 
 #season stats
 #note to translators. use abreviations of league table where applicable
@@ -498,6 +514,7 @@ ForumSpecialBBCode.forumSymbol="%s" einfügen
 ForumSpecialBBCode.symbols=Symbol einfügen\: %s
 
 
+ShowNestedQuotes=Zeige verschachtelte Zitat an
 
 #Transferlistfilters
 foxtrick.transferfilter.Enter_filter_name=Filtername\:
@@ -552,6 +569,8 @@ matchOrder.previousPrediction=﻿Vorherige Vorhersage
 matchOrder.AddMatchManually=Füge ein Spiel manuell hinzu
 matchOrder.swapPositions=Seiten vertauschen
 matchOrder.options=Optionen
+matchOrder.staminaDiscount=Ausdauer einbeziehen
+matchOrder.staminaDiscount.title=Sektorenbewertungen werden entsprechend des Beitrags der Positionen zu den einzelnen Sektoren angepasst
 matchOrder.summary=Zusammenfassung
 
 #Skills
@@ -636,6 +655,7 @@ TSI=Total Skill Index
 TSI.abbr=TSI
 
 CanBePromotedIn=Kann befördert werden in
+CanBePromotedIn.abbr=Bef
 
 Personality=Personalität
 Agreeability=Beliebtheit
@@ -675,10 +695,14 @@ Last_match=Letztes Spiel
 Last_match.abbr=Letztes
 Last_stars=Letzte Bewertung
 Last_stars.abbr=Str
+Last_stars_EndOfGame=Gelbe Sterne im letzten Spiel
+Last_stars_EndOfGame.abbr=St
+Last_stars_decline=Braune Sterne
 Last_stars_decline.abbr=Diff
 Last_position=Letzte Position
 Last_position.abbr=Pos
 #following string uses pluralForms
+Last_match_played_as_at=Spielte %1 Minute als %2 in seinem letzten Spiel am %3.;Spielte %1 Minuten als %2 in seinem letzten Spiel am %3.
 Last_match_didnot_play=Hat noch kein Spiel absolviert.
 
 Bruised=Angeschlagen
@@ -930,6 +954,8 @@ maximum=Max.
 foxtrick.RapidId.ViewById=Anzeige nach ID
 Senior=Senior
 Youth=Jugend
+Tournaments=Turniere
+Tournament=Turnier
 
 # SkillTable
 foxtrick.SkillTable.Switch_view_title=Wechselt die Ansicht der Tabelle
@@ -942,12 +968,18 @@ HTMSPrediction.prediction=Ergebnisvorhersage
 HTMSPrediction.winDrawLoss=Sieg/Unentschieden/Niederlage
 HTMSPrediction.title=Spielanalyse durch HTMS
 HTMSPrediction.changePrediction=Vorhersage ändern
+HTMSPrediction.team=Verein
 
 #htms table of statistical truth
+truthTable.table=HTMS-Tabelle der Statistischen Wahrheit
 truthTable.predicted_position=\#
+truthTable.name=Verein
+truthTable.real_position=Akt. Pos.
 truthTable.real_points=Tatsächliche Punkte
 truthTable.predicted_points=Vorausgesagte Punkte
 truthTable.difference=±
+truthTable.notAvailableYet=Daten noch nicht verfügbar. Gehe zur HTMS Seite um sie erstellen zu lassen
+truthTable.tableAtHTMS=Diese Tabelle auf der HTMS Webseite
 
 # HTMSPoints
 HTMSPoints=HTMS Punkte\:
@@ -983,6 +1015,7 @@ TickerAlert.sound=Hinweiston
 
 # tickers
 ticker.type.welcome=Willkommen
+ticker.type.supporter=Unterstützter Vereinsmanager hat sich eingeloggt
 ticker.type.forum=Forenantworten an mich
 ticker.type.transfer=Transfermarkt
 ticker.type.challenge=Forderungen
@@ -998,6 +1031,7 @@ LocalTime.local=Lokalzeit
 LocalTime.local.title=Anzeige in Lokalzeit. Klicken um zur Hattrickzeit zu wechseln.
 
 # Links
+Links.feeds=Feeds von Linklisten (in getrennten Zeilen)
 
 #actions
 Copy=Kopieren
@@ -1013,6 +1047,9 @@ action.clearCache.title=Leert FoxTricks eigenen Xml-Cache. FoxTrick läd bei Bed
 featureHighlight.title=Klicken um die meisten Foxtrick-Elemente farblich hervorzuheben
 
 # fennec ui
+pageAction.rightSidebar=Rechtes Menue anzeigen
+pageAction.mainContent=Hauptbereich anzeigen
+pageAction.leftSidebar=Linkes Menue anzeigen
 pageAction.all=Zeige alles
 
 # buttons
@@ -1087,6 +1124,7 @@ tab.changes=Änderungen
 tab.help=Hilfe
 
 foxtrick.prefs.setup=Einstellungen
+foxtrick.prefs.setup.desc=Dies sind die Einstellungen die FoxTrick bestimmt hat. Fehler {bitte melden}.
 foxtrick.prefs.setup.locale=Spracheinstellungen
 foxtrick.prefs.setup.dateFormat=Datumsformat
 foxtrick.prefs.setup.country=Ländereinstellung
@@ -1126,6 +1164,7 @@ link.nightlyOpera=Development builds für Opera
 link.nightlySafari=Development builds für Safari
 link.recentChanges=Letzte Änderungen
 
+module.link=Du kannst diesen Link kopieren und im Forum einfügen um hierher zu verlinken
 
 foxtrick.showReleaseNotes=Anzeige der Release Notes nach einem FoxTrick-Update
 foxtrick.versionReleaseNotes=Anzeige der Release Notes für\:
